<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddUserActivity">

    <EditText
            android:id="@+id/username_label"
            android:text="@string/username"
            android:layout_width="87dp"
            android:layout_height="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/usernameBox"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="448dp" />

    <EditText
            android:id="@+id/usernameBox"
            android:text="@string/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/username_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="448dp" />

    <EditText
            android:id="@+id/passwordLabel"
            android:text="@string/password"
            android:inputType="textPersonName"
            android:layout_width="86dp"
            android:layout_height="41dp"
            android:ems="10"
            tools:ignore="TextFields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/passwordBox"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/username_label" />

    <EditText
            android:id="@+id/passwordBox"
            android:text="@string/empty"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            tools:ignore="TextFields"
            app:layout_constraintStart_toEndOf="@+id/passwordLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/usernameBox" />


    <Button
            android:id="@+id/add_user_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/add_user"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="124dp"
            android:layout_marginStart="16dp" />

    <Button
            android:id="@+id/clear_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/clear"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="124dp"
            android:layout_marginEnd="16dp" />

    <Button
            android:id="@+id/back_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/back"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>